Bug 270660 - Muon updater should warn the users about not updated configuration files
Summary: Muon updater should warn the users about not updated configuration files
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-11 11:46 UTC by Alvaro Manuel Recio Perez
Modified: 2016-03-02 13:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.85
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2011-04-11 11:46:08 UTC
Version:           1.1.65 (using KDE 4.6.2) 
OS:                Linux

First of all, I'm not really sure if this is a bug in Muon or if it's really a bug.

I use Kubuntu in two computers, one at work and one at home. At work I installed Muon whereas at home I keep using the traditional KPackageKit manager.

Recently, I updated KDE SC to 4.6.2 in both computers. In both computers, I customized kdm to my needs and, consequently, my /etc/kde4/kdm/kdmrc file was different from the one provided by the package.

After updating my system, KPackageKit placed a notification reporting that there were some messages from the package manager. The messaged said that my kmd configuration file hadn't been overwritten and that a new version was saved as /etc/kde4/kdm/kdmrc.dpkg-dist. Muon updater also created that file but it didn't notified me about that.

In my opinion, Muon updater should notify the user somehow about this kind of events, just as KPackageKit does.

Reproducible: Didn't try

Steps to Reproduce:
1. Change a configuration file provided by a package.
2. Update that package using Muon updater.

Actual Results:  
Muon updater silently creates a new configuration file as provided by the package.

Expected Results:  
Muon should inform the user about the new configuration file.

OS: Linux (x86_64) release 2.6.35-28-generic
Compiler: cc
Comment 1 Jonathan Thomas 2011-06-19 17:41:50 UTC
I've not made a GUI for that bit yet, but it's high on the todo list.
Comment 2 Jonathan Thomas 2011-06-19 18:22:01 UTC
Git commit 4276a6ba4952d04d3a8016e1a854685ad17612f7 by Jonathan Thomas.
Committed on 19/06/2011 at 18:20.
Pushed by jmthomas into branch 'master'.

Add support for asking whether or not to install a new version of a config file that has been locally modified.

BUG:270660
FIXED-IN:1.1.85

M  +25   -0    libmuon/MuonMainWindow.cpp     

http://commits.kde.org/muon/4276a6ba4952d04d3a8016e1a854685ad17612f7
Comment 3 Alex Ioannou 2013-08-16 10:54:54 UTC
This bug appears to be back.  I'm using muon 2.0.1 on Kubuntu 13.04 and I'm trying to upgrade to KDE 4.11.  Muon is currently stuck at "waiting for configuration file" and if I check the logs in /var/log/apt I can see it's prompting to overwrite kderc!
Comment 4 Andrzej Jarmoniuk 2014-01-17 08:58:50 UTC
Bug is back in 4.11.3. Muon is stuck waiting for configuration file. I was only able to continue by killing muon and its dpkg process, clearing the lock and doing sudo dpkg --configure -a.

This will not work for most users. I already saw advices in forums to just restart the system.
Comment 5 Maarten Bezemer 2014-03-25 22:22:04 UTC
I have the same problem (Muon 2.1.3). I had/have modified a configuration file (in /etc/) and updating the corresponding package resulted in the "waiting for configuration file" message (until I killed Muon and dpkg).

It looks like that user interaction (to choose which configuration file is desired), required by dpkg, is not passed to Muon or shown to the user, making dpkg (and thus Muon) wait indefinitely.