Add support for asking whether or not to install a new version of a config file that has been locally modified.

BUG:270660
FIXED-IN:1.1.85